--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,11 +6,11 @@
     "python.testing.unittestArgs": [
         "-v",
         "-s",
-        ".",
+        "./aipollo_processor",
         "-p",
-        "*test*.py"
+        "*_test.py"
     ],
     "python.testing.pytestEnabled": false,
     "python.testing.nosetestsEnabled": false,
-    "python.testing.unittestEnabled": true
+    "python.testing.unittestEnabled": true,
 }
